--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
   <body>
     <!-- header -->
     <header id="site-header" class=" bg-blue clearfix">
+      <!-- nav bar -->
       <div class="nav clearfix">
         <div class="logo float-left">
 
         </div>
         <div class="left-menu float-left">
             <ul>
-              <li>il metodo</li>
-              <li>la tecnologia</li>
-              <li>real-life english</li>
-              <li>soluzioni aziendali</li>
+              <li><a href="">il metodo</a></li>
+              <li><a href="">la teconologia</a></li>
+              <li><a href="">real-life english</a></li>
+              <li><a href="">soluzioni aziendali</a></li>
             </ul>
         </div>
         <div class="right-menu float-right">
@@ -29,26 +30,27 @@
           </ul>
         </div>
       </div>
-      <div class="title-banner">
-        <h1>
-
-        </h1>
-        <h4>
-
-        </h4>
+      <!-- nav bar -->
+      <!-- banner header -->
+      <div class="banner-image">
+        <div class="big-image container">
+          <div class="banner-title">
+            <h1>Scegli l'inglese studiato per i professionisti</h1>
+            <a href="" class="bottom bg-green">
+              <strong>Crea un piano</strong>
+            </a>
+          </div>
+        </div>
       </div>
-      <div class="banner">
-
-      </div>
+      <!-- /banner header -->
     </header>
     <!-- /header -->
-
     <!-- main -->
     <main id="site-main" class="clearfix">
       <!-- colonne centrali -->
       <div class="container">
         <div class="col-main" id="formation-pic">
-        
+
         </div>
         <div class="col-main">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
