--- a/index.html
+++ b/index.html
@@ -48,15 +48,21 @@
     <!-- main -->
     <main id="site-main" class="clearfix">
       <!-- colonne centrali -->
+      <div class="info-main bg-grey">
+        <div class="text-info-main">
+          <h1>Le scuole di lingua tradizionali non sono efficaci</h1>
+          <h4>Sono un corso incentrato sulla Fluency  può portare ad una solizione definitiva concreta.</h4>
+        </div>
+      </div>
       <div class="container">
-        <div class="col-main" id="formation-pic">
+        <div class="col-main profile-pic" id="formation">
+          <h3>formation title</h3>
+        </div>
+        <div class="col-main profile-pic" id="computer">
 
         </div>
-        <div class="col-main">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
-        <div class="col-main">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="col-main profile-pic" id="doc">
+
         </div>
       </div><div class="container">
         <div class="col-main">
